--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             </div>
         </div>
 
-        <div class="sm-size">
-            <div class="row __reveal ">
+        <div class="sm-size __reveal">
+            <div class="row">
                 <div class="item">
                     <p>
                         JUU is a platform that stands for artists and not management companies
@@ -150,7 +150,7 @@
                     <img class="margin-bottom" src="./src/static/box.png">
                 </div>
             </div>
-            <div class="row __reveal">
+            <div class="row">
                 <div class="item">
                     <p>
                         JUU is a semi-commercial platform that will be acting as a quasi-agency and full-cycle music platform
@@ -175,7 +175,7 @@
         </div>
     </section>
 
-    <section id="section3" class="">
+    <section id="section3">
         <div class="__reveal">
             <h2><span>Music</span> Marketplace</h2>
             <p>
@@ -202,19 +202,19 @@
         </div>
 
         <div class="__vectors __fadeIn">
-            <img class="__vector_9" src="./src/static/vectors/vector-1.png" style="left: 25px;  top: 20px;">
-            <img class="__vector_8" src="./src/static/vectors/vector-2.png" style="left: 75px;  top: 30px;">
-            <img class="__vector_7" src="./src/static/vectors/vector-3.png" style="left: 125px; top: 40px;">
-            <img class="__vector_6" src="./src/static/vectors/vector-4.png" style="left: 175px; top: 50px;">
-            <img class="__vector_5" src="./src/static/vectors/vector-5.png" style="left: 225px; top: 60px;">
-            <img class="__vector_4" src="./src/static/vectors/vector-6.png" style="left: 275px; top: 70px;">
-            <img class="__vector_3" src="./src/static/vectors/vector-7.png" style="left: 325px; top: 80px;">
-            <img class="__vector_2" src="./src/static/vectors/vector-8.png" style="left: 375px; top: 90px;">
-            <img class="__vector_1" src="./src/static/vectors/vector-9.png" style="left: 425px; top: 100px;">
+            <img class="__vector_9" src="./src/static/vectors/vector-1.png" style="left: 25px;  top: 20px;"  alt="Music marketplace">
+            <img class="__vector_8" src="./src/static/vectors/vector-2.png" style="left: 75px;  top: 30px;"  alt="Music marketplace">
+            <img class="__vector_7" src="./src/static/vectors/vector-3.png" style="left: 125px; top: 40px;"  alt="Music marketplace">
+            <img class="__vector_6" src="./src/static/vectors/vector-4.png" style="left: 175px; top: 50px;"  alt="Music marketplace">
+            <img class="__vector_5" src="./src/static/vectors/vector-5.png" style="left: 225px; top: 60px;"  alt="Music marketplace">
+            <img class="__vector_4" src="./src/static/vectors/vector-6.png" style="left: 275px; top: 70px;"  alt="Music marketplace">
+            <img class="__vector_3" src="./src/static/vectors/vector-7.png" style="left: 325px; top: 80px;"  alt="Music marketplace">
+            <img class="__vector_2" src="./src/static/vectors/vector-8.png" style="left: 375px; top: 90px;"  alt="Music marketplace">
+            <img class="__vector_1" src="./src/static/vectors/vector-9.png" style="left: 425px; top: 100px;" alt="Music marketplace">
         </div>
     </section>
 
-    <section id="section4" class="">
+    <section id="section4">
         <div class="__reveal">
             <h2><span>radio</span> station</h2>
             <p>
@@ -275,7 +275,7 @@
         </div>
     </section>
 
-    <section id="section6" class="">
+    <section id="section6">
         <div class="logo __fadeIn">
             <img src="./src/static/logo.png" alt="juu.live">
         </div>
