Change contact button

--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
 
             </div>
 
-            <div class="__button __fadeIn">
-                <button>chat with us</button>
+            <div class="button-container __fadeIn">
+                <a class="button" href="mailto:hi@juu.live">email to us</a>
             </div>
         </div>
     </section>
