--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
 <header>
     <nav>
-        <a href="#section1">about</a>
-        <a href="#section3">music marketplace</a>
-        <a href="#section4">radio station</a>
-        <a href="#section5">blockchain ticket sales</a>
-        <a href="#section6">team</a>
+        <a href="#about">about</a>
+        <a href="#marketplace">music marketplace</a>
+        <a href="#radio">radio station</a>
+        <a href="#tickets">blockchain ticket sales</a>
+        <a href="#team">team</a>
     </nav>
 </header>
 
@@ -57,7 +57,7 @@
 </div>
 
 <main>
-    <section id="section1">
+    <section id="about" class="section1">
         <img class="section1_img-effect"
              src="./src/static/section1_bg.png"
              alt="JUU is the first blockchain-based  platform that combines an online radio station, NFT marketplace only for music, and a ticket service">
@@ -70,7 +70,7 @@
         </p>
     </section>
 
-    <section id="section2" class="">
+    <section class="section2">
         <div class="lg-size">
             <div class="row __reveal">
                 <div class="item">
@@ -175,7 +175,7 @@
         </div>
     </section>
 
-    <section id="section3">
+    <section id="marketplace" class="section3">
         <div class="__reveal">
             <h2><span>Music</span> Marketplace</h2>
             <p>
@@ -214,7 +214,7 @@
         </div>
     </section>
 
-    <section id="section4">
+    <section id="radio" class="section4">
         <div class="__reveal">
             <h2><span>radio</span> station</h2>
             <p>
@@ -241,7 +241,7 @@
              alt="JUU radio station">
     </section>
 
-    <section id="section5">
+    <section id="tickets" class="section5">
         <img class="__fadeIn"
              src="./src/static/section5_bg.png"
              alt="Blockchain ticket sales">
@@ -275,7 +275,7 @@
         </div>
     </section>
 
-    <section id="section6">
+    <section id="team" class="section6">
         <div class="logo __fadeIn">
             <img src="./src/static/logo.png" alt="juu.live">
         </div>
@@ -332,11 +332,11 @@
 
 <footer>
     <nav>
-        <a href="#section1">about</a>
-        <a href="#section3">music marketplace</a>
-        <a href="#section4">radio station</a>
-        <a href="#section5">blockchain ticket sales</a>
-        <a href="#section6">team</a>
+        <a href="#about">about</a>
+        <a href="#marketplace">music marketplace</a>
+        <a href="#radio">radio station</a>
+        <a href="#tickets">blockchain ticket sales</a>
+        <a href="#team">team</a>
     </nav>
 </footer>
 
