--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
     <img src="./src/static/logo.png" alt="juu.live">
     <button id="btn_play"><i class="fas fa-volume-mute"></i></button>
     <button id="btn_pause"><i class="fas fa-volume-up"></i></button>
+
+    <div class="tap_play">
+        <div>
+            <span class="arrows one"></span>
+            <span class="arrows two"></span>
+            <span class="arrows tree"></span>
+        </div>
+    </div>
 </div>
 
 <div>
