--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <p>
                         Anton is a life-long programming enthusiast with an industry experience of over 15 years,
                         a Master of Computer Science and a versatile professional. He worked with huge corporations and start-ups,
-                        including LenovoUa, PiBox, ConcertUa, Best Wallet & Katacult.
+                        including Lenovo, PiBox, ConcertUa, Best Wallet & Katacult.
                     </p>
                 </div>
 
