--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     </nav>
 </footer>
 
-<audio id="audio">
+<audio id="audio" loop>
     <source src="./src/static/juu.mp3" type="audio/mp3" />
 </audio>
 
