--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <p>
                         Vladimir is an experienced CEO, a serial entrepreneur, legal and financial specialist
                         as well as a crypto/blockchain influencer with a big following. He worked for ICObench, was a CEO of
-                        Spaceswap.app and is currently a Venture Partner and Shima Capital as well as a co-founder of Liquify.io
+                        Spaceswap.app and is currently a Venture Partner and Shima Capital as well as a co-founder of liquidifty.io
                     </p>
                 </div>
 
